<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply"
        android:title="@string/reply" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:title="@string/download" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/action_select"
        android:icon="@drawable/ic_check_circle"
        android:title="@string/select" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward_outlined"
        android:title="@string/forward" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
</menu>
