<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/chkSelectAppt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvApptMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name_specialty"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#222" />
        <TextView
            android:id="@+id/tvApptDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_amp_time"
            android:textSize="14sp"
            android:textColor="#444"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvApptStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/green_primary"
        android:layout_marginStart="10dp"/>
</LinearLayout>
